--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <title>BigDevSoon - The Veggie King Project</title>
   </head>
   <body>
-    <!-- Place below is for your own exciting code -->
-    <p>Time to write some code! 👀</p>
-    <!-- Change the [ME] part to your own name/GitHub link -->
-    <div class="footer">
-      <a href="https://bigdevsoon.me" target="_blank" rel="noopener noreferrer"
-        >Project by BigDevSoon</a
-      >
-      |
-      <span>Built with ❤️ by [ME]</span>
-    </div>
+    <nav class="nav-container">
+      <img class="nav-title" src="assets/icons/logo.svg" alt="Logo" />
+      <div>
+        <ul class="nav-links">
+          <li>ABOUT US</li>
+          <li>MENU</li>
+          <li>CONTACT</li>
+        </ul>
+      </div>
+    </nav>
   </body>
 </html>
