Finalized the Nav bar

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <title>BigDevSoon - The Veggie King Project</title>
   </head>
   <body>
-    <nav class="nav-container">
+    <nav class="nav_container">
       <img class="nav-title" src="assets/icons/logo.svg" alt="Logo" />
       <div>
-        <ul class="nav-links">
-          <li>ABOUT US</li>
-          <li>MENU</li>
-          <li>CONTACT</li>
+        <ul class="nav_links">
+          <li><a href="#"> ABOUT US</a></li>
+          <li><a href="#"> MENU</a></li>
+          <li><a href="#"> CONTACT</a></li>
         </ul>
       </div>
     </nav>
