--- a/index.html
+++ b/index.html
@@ -17,5 +17,30 @@
         </ul>
       </div>
     </nav>
+
+    <div class="section_1">
+      <div class="section1_left">
+        <div class="section1_description">
+          <h3 class="s1_title">
+            Healthy & Fresh <br />
+            Food For You
+          </h3>
+          <p class="s1_info">
+            Created for lovers of healthy, delicious and <br />
+            non-obvious food.
+          </p>
+          <button>Check menu</button>
+        </div>
+      </div>
+      <div class="section1_right">
+        <div class="slideshow">
+          <img
+            class="slideshow_img"
+            src="assets/images/hero-section-slide-food-1.png"
+            alt="hssf1"
+          />
+        </div>
+      </div>
+    </div>
   </body>
 </html>
