--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     </nav>
 
     <div class="section_1">
+      <div class="chili">
+        <img src="assets/images/hero-section-food.png" alt="chili" />
+      </div>
       <div class="section1_left">
         <div class="section1_description">
           <h3 class="s1_title">
@@ -29,16 +32,42 @@
             Created for lovers of healthy, delicious and <br />
             non-obvious food.
           </p>
-          <button>Check menu</button>
+          <button class="check_menu">
+            Check menu &nbsp
+            <img src="assets/icons/check-menu-icon.svg" alt="" />
+          </button>
         </div>
       </div>
       <div class="section1_right">
         <div class="slideshow">
-          <img
-            class="slideshow_img"
-            src="assets/images/hero-section-slide-food-1.png"
-            alt="hssf1"
-          />
+          <div class="food fade">
+            <img
+              class="slideshow_img"
+              src="assets/images/hero-section-slide-food-1.png"
+              alt="hssf1"
+            />
+          </div>
+          <div class="food fade">
+            <img
+              class="slideshow_img"
+              src="assets/images/hero-section-slide-food-2.png"
+              alt="hssf2"
+            />
+          </div>
+          <div class="food fade">
+            <img
+              class="slideshow_img"
+              src="assets/images/hero-section-slide-food-3.png"
+              alt="hssf3"
+            />
+          </div>
+          <div class="food fade">
+            <img
+              class="slideshow_img"
+              src="assets/images/hero-section-slide-food-4.png"
+              alt="hssf3"
+            />
+          </div>
         </div>
       </div>
     </div>
