--- a/index.html
+++ b/index.html
@@ -11,65 +11,89 @@
       <img class="nav-title" src="assets/icons/logo.svg" alt="Logo" />
       <div>
         <ul class="nav_links">
-          <li><a href="#"> ABOUT US</a></li>
+          <li><a href="#about_us"> ABOUT US</a></li>
           <li><a href="#"> MENU</a></li>
           <li><a href="#"> CONTACT</a></li>
         </ul>
       </div>
     </nav>
 
-    <div class="section_1">
-      <div class="chili">
-        <img src="assets/images/hero-section-food.png" alt="chili" />
+    <section id="landing">
+      <div class="section_1">
+        <div class="chili">
+          <img src="assets/images/hero-section-food.png" alt="chili" />
+        </div>
+        <div class="section1_left">
+          <div class="section1_description">
+            <h3 class="s1_title">
+              Healthy & Fresh <br />
+              Food For You
+            </h3>
+            <p class="s1_info">
+              Created for lovers of healthy, delicious and <br />
+              non-obvious food.
+            </p>
+            <button class="check_menu">
+              Check menu &nbsp
+              <img src="assets/icons/check-menu-icon.svg" alt="" />
+            </button>
+          </div>
+        </div>
+        <div class="section1_right">
+          <div class="slideshow">
+            <div class="food fade">
+              <img
+                class="slideshow_img"
+                src="assets/images/hero-section-slide-food-1.png"
+                alt="hssf1"
+              />
+            </div>
+            <div class="food fade">
+              <img
+                class="slideshow_img"
+                src="assets/images/hero-section-slide-food-2.png"
+                alt="hssf2"
+              />
+            </div>
+            <div class="food fade">
+              <img
+                class="slideshow_img"
+                src="assets/images/hero-section-slide-food-3.png"
+                alt="hssf3"
+              />
+            </div>
+            <div class="food fade">
+              <img
+                class="slideshow_img"
+                src="assets/images/hero-section-slide-food-4.png"
+                alt="hssf3"
+              />
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="section1_left">
-        <div class="section1_description">
-          <h3 class="s1_title">
-            Healthy & Fresh <br />
-            Food For You
-          </h3>
-          <p class="s1_info">
-            Created for lovers of healthy, delicious and <br />
-            non-obvious food.
+    </section>
+
+    <section id="about_us">
+      <div class="section_2_circle"></div>
+      <div class="section_2">
+        <div class="section2_left">
+          <img
+            class="section2_left_img"
+            src="assets/images/about-us-section-food.png"
+            alt=""
+          />
+        </div>
+        <div class="section2_right">
+          <h4 class="s2_aboutus">About Us<h4>
+          <h2 class="s2_title">Few words about us</h2>
+          <p class="s2_info">
+            We are not ordinary food truck. We create a place <br />
+            overflowing with positive energy that it expresses <br />
+            important to us values. Get to know them specifically.
           </p>
-          <button class="check_menu">
-            Check menu &nbsp
-            <img src="assets/icons/check-menu-icon.svg" alt="" />
-          </button>
         </div>
       </div>
-      <div class="section1_right">
-        <div class="slideshow">
-          <div class="food fade">
-            <img
-              class="slideshow_img"
-              src="assets/images/hero-section-slide-food-1.png"
-              alt="hssf1"
-            />
-          </div>
-          <div class="food fade">
-            <img
-              class="slideshow_img"
-              src="assets/images/hero-section-slide-food-2.png"
-              alt="hssf2"
-            />
-          </div>
-          <div class="food fade">
-            <img
-              class="slideshow_img"
-              src="assets/images/hero-section-slide-food-3.png"
-              alt="hssf3"
-            />
-          </div>
-          <div class="food fade">
-            <img
-              class="slideshow_img"
-              src="assets/images/hero-section-slide-food-4.png"
-              alt="hssf3"
-            />
-          </div>
-        </div>
-      </div>
-    </div>
+    </section>
   </body>
 </html>
