Menu section structured

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div>
         <ul class="nav_links">
           <li><a href="#about_us"> ABOUT US</a></li>
-          <li><a href="#"> MENU</a></li>
+          <li><a href="#menu"> MENU</a></li>
           <li><a href="#"> CONTACT</a></li>
         </ul>
       </div>
@@ -76,6 +76,7 @@
 
     <section id="about_us">
       <div class="section_2_circle"></div>
+
       <div class="section_2">
         <div class="section2_left">
           <img
@@ -84,14 +85,35 @@
             alt=""
           />
         </div>
-        <div class="section2_right">
-          <h4 class="s2_aboutus">About Us<h4>
-          <h2 class="s2_title">Few words about us</h2>
-          <p class="s2_info">
-            We are not ordinary food truck. We create a place <br />
-            overflowing with positive energy that it expresses <br />
-            important to us values. Get to know them specifically.
-          </p>
+        <div class="section2_right_container">
+          <div class="section2_right_row">
+            <h4 class="section_link">About Us</h4>
+            <h2 class="section_title">Few words about us</h2>
+            <p class="section_info">
+              We are not ordinary food truck. We create a place <br />
+              overflowing with positive energy that it expresses <br />
+              important to us values. Get to know them specifically.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="menu">
+      <div class="menu_container">
+        <div class="menu_row">
+          <div class="s3_top">
+            <h4 class="section_link center">Menu</h4>
+            <h2 class="section_title center">Explore our best food</h2>
+            <p class="section_info center menu_info">
+              Below you can see our best selling meals!
+            </p>
+          </div>
+          <div class="s3_bottom">
+            <div>featured 1</div>
+            <div>featured 2</div>
+            <div>featured 3</div>
+          </div>
         </div>
       </div>
     </section>
