Menu section completed

--- a/index.html
+++ b/index.html
@@ -110,9 +110,39 @@
             </p>
           </div>
           <div class="s3_bottom">
-            <div>featured 1</div>
-            <div>featured 2</div>
-            <div>featured 3</div>
+            <div class="menu_card">
+              <img
+                class="menu_burger_img"
+                src="assets/images/menu-section-mighty-burger.png"
+                alt="menu_burger"
+              />
+              <div>
+                <h4 class="food_title">Mighty burger</h4>
+                <p class="food_info">Served with fires and drink</p>
+              </div>
+            </div>
+            <div class="menu_card">
+              <img
+                class="menu_burger_img"
+                src="assets/images/menu-section-chickpae-salad.png"
+                alt="menu_salad"
+              />
+              <div>
+                <h4 class="food_title">Chickpae's salad</h4>
+                <p class="food_info">Served with fires and drink</p>
+              </div>
+            </div>
+            <div class="menu_card last_card">
+              <img
+                class="menu_burger_img"
+                src="assets/images/menu-section-chickpae-wrap.png"
+                alt="menu_wrap"
+              />
+              <div>
+                <h4 class="food_title">Chickpae's wrap</h4>
+                <p class="food_info">Served with fires and drink</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
