Next section structured.

--- a/index.html
+++ b/index.html
@@ -147,5 +147,29 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <h2 class="section_title center">Good food = happy clients</h2>
+      <div class="grid">
+        <div class="gallery1 gallery_photo">
+          <img src="assets/images/gallery-photo-1.png" alt="gp1" />
+        </div>
+        <div class="gallery2">
+          <img src="assets/images/gallery-photo-2.png" alt="gp2" />
+        </div>
+        <div class="gallery3">
+          <img src="assets/images/gallery-photo-3.png" alt="gp3" />
+        </div>
+        <div class="gallery4">
+          <img src="assets/images/gallery-photo-4.png" alt="gp4" />
+        </div>
+        <div class="gallery5">
+          <img src="assets/images/gallery-photo-5.png" alt="gp5" />
+        </div>
+        <div class="gallery6">
+          <img src="assets/images/gallery-photo-6.png" alt="gp6" />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
