Gallery section completed

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 <p class="food_info">Served with fires and drink</p>
               </div>
             </div>
-            <div class="menu_card last_card">
+            <div class="menu_card">
               <img
                 class="menu_burger_img"
                 src="assets/images/menu-section-chickpae-wrap.png"
@@ -148,26 +148,50 @@
       </div>
     </section>
 
-    <section>
+    <section id="gallery_section">
       <h2 class="section_title center">Good food = happy clients</h2>
       <div class="grid">
-        <div class="gallery1 gallery_photo">
-          <img src="assets/images/gallery-photo-1.png" alt="gp1" />
+        <div class="gallery_1 gallery_container">
+          <img
+            class="gallery_img"
+            src="assets/images/gallery-photo-1.png"
+            alt="gp1"
+          />
         </div>
-        <div class="gallery2">
-          <img src="assets/images/gallery-photo-2.png" alt="gp2" />
+        <div class="gallery2 gallery_container">
+          <img
+            class="gallery_img"
+            src="assets/images/gallery-photo-2.png"
+            alt="gp2"
+          />
         </div>
-        <div class="gallery3">
-          <img src="assets/images/gallery-photo-3.png" alt="gp3" />
+        <div class="gallery3 gallery_container">
+          <img
+            class="gallery_img"
+            src="assets/images/gallery-photo-3.png"
+            alt="gp3"
+          />
         </div>
-        <div class="gallery4">
-          <img src="assets/images/gallery-photo-4.png" alt="gp4" />
+        <div class="gallery4 gallery_container">
+          <img
+            class="gallery_img"
+            src="assets/images/gallery-photo-4.png"
+            alt="gp4"
+          />
         </div>
-        <div class="gallery5">
-          <img src="assets/images/gallery-photo-5.png" alt="gp5" />
+        <div class="gallery5 gallery_container">
+          <img
+            class="gallery_img"
+            src="assets/images/gallery-photo-5.png"
+            alt="gp5"
+          />
         </div>
-        <div class="gallery6">
-          <img src="assets/images/gallery-photo-6.png" alt="gp6" />
+        <div class="gallery6 gallery_container">
+          <img
+            class="gallery_img"
+            src="assets/images/gallery-photo-6.png"
+            alt="gp6"
+          />
         </div>
       </div>
     </section>
