Contact section completed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul class="nav_links">
           <li><a href="#about_us"> ABOUT US</a></li>
           <li><a href="#menu"> MENU</a></li>
-          <li><a href="#"> CONTACT</a></li>
+          <li><a href="#contact"> CONTACT</a></li>
         </ul>
       </div>
     </nav>
@@ -117,8 +117,8 @@
                 alt="menu_burger"
               />
               <div>
-                <h4 class="food_title">Mighty burger</h4>
-                <p class="food_info">Served with fires and drink</p>
+                <h4 class="card_title">Mighty burger</h4>
+                <p class="card_info">Served with fires and drink</p>
               </div>
             </div>
             <div class="menu_card">
@@ -128,8 +128,8 @@
                 alt="menu_salad"
               />
               <div>
-                <h4 class="food_title">Chickpae's salad</h4>
-                <p class="food_info">Served with fires and drink</p>
+                <h4 class="card_title">Chickpae's salad</h4>
+                <p class="card_info">Served with fires and drink</p>
               </div>
             </div>
             <div class="menu_card">
@@ -139,8 +139,8 @@
                 alt="menu_wrap"
               />
               <div>
-                <h4 class="food_title">Chickpae's wrap</h4>
-                <p class="food_info">Served with fires and drink</p>
+                <h4 class="card_title">Chickpae's wrap</h4>
+                <p class="card_info">Served with fires and drink</p>
               </div>
             </div>
           </div>
@@ -148,50 +148,92 @@
       </div>
     </section>
 
-    <section id="gallery_section">
+    <section id="gallery_section" class="bottom">
       <h2 class="section_title center">Good food = happy clients</h2>
-      <div class="grid">
-        <div class="gallery_1 gallery_container">
-          <img
-            class="gallery_img"
-            src="assets/images/gallery-photo-1.png"
-            alt="gp1"
-          />
+      <div class="center">
+        <div class="grid">
+          <div class="gallery_1 gallery_container">
+            <img
+              class="gallery_img"
+              src="assets/images/gallery-photo-1.png"
+              alt="gp1"
+            />
+          </div>
+          <div class="gallery2 gallery_container">
+            <img
+              class="gallery_img"
+              src="assets/images/gallery-photo-2.png"
+              alt="gp2"
+            />
+          </div>
+          <div class="gallery3 gallery_container">
+            <img
+              class="gallery_img"
+              src="assets/images/gallery-photo-3.png"
+              alt="gp3"
+            />
+          </div>
+          <div class="gallery4 gallery_container">
+            <img
+              class="gallery_img"
+              src="assets/images/gallery-photo-4.png"
+              alt="gp4"
+            />
+          </div>
+          <div class="gallery5 gallery_container">
+            <img
+              class="gallery_img"
+              src="assets/images/gallery-photo-5.png"
+              alt="gp5"
+            />
+          </div>
+          <div class="gallery6 gallery_container">
+            <img
+              class="gallery_img"
+              src="assets/images/gallery-photo-6.png"
+              alt="gp6"
+            />
+          </div>
         </div>
-        <div class="gallery2 gallery_container">
-          <img
-            class="gallery_img"
-            src="assets/images/gallery-photo-2.png"
-            alt="gp2"
-          />
-        </div>
-        <div class="gallery3 gallery_container">
-          <img
-            class="gallery_img"
-            src="assets/images/gallery-photo-3.png"
-            alt="gp3"
-          />
-        </div>
-        <div class="gallery4 gallery_container">
-          <img
-            class="gallery_img"
-            src="assets/images/gallery-photo-4.png"
-            alt="gp4"
-          />
-        </div>
-        <div class="gallery5 gallery_container">
-          <img
-            class="gallery_img"
-            src="assets/images/gallery-photo-5.png"
-            alt="gp5"
-          />
-        </div>
-        <div class="gallery6 gallery_container">
-          <img
-            class="gallery_img"
-            src="assets/images/gallery-photo-6.png"
-            alt="gp6"
-          />
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="contact_container">
+        <div class="contact_row">
+          <div class="contact_header">
+            <h4 class="section_link center">Contact</h4>
+            <h2 class="section_title center">We're waiting for you!</h2>
+          </div>
+          <div class="contact_info center">
+            <div class="contact_card">
+              <div>
+                <div class="center">
+                  <img src="assets/icons/time-icon.svg" alt="time-icon" />
+                </div>
+                <h4 class="card_title center">Today 12 pm - 9 pm</h4>
+                <p class="card_info center">Working Hours</p>
+              </div>
+            </div>
+            <div class="contact_card">
+              <div>
+                <div class="center">
+                  <img src="assets/icons/map-icon.svg" alt="map-icon" />
+                </div>
+                <h4 class="card_title center">3883 Rupert St. Vancouver</h4>
+                <p class="card_info center">Find Us</p>
+              </div>
+            </div>
+            <div class="contact_card">
+              <div>
+                <div class="center">
+                  <img src="assets/icons/phone-icon.svg" alt="phone-icon" />
+                </div>
+                <h4 class="card_title center">(604) 569-2198</h4>
+                <p class="card_info center">Call Us</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </section>
