Footer section completed

--- a/index.html
+++ b/index.html
@@ -238,4 +238,47 @@
       </div>
     </section>
   </body>
+  <footer>
+    <div class="footer_container">
+      <div class="footer_row">
+        <div>
+          <img class="logo_footer" src="assets/icons/logo.svg" alt="logo" />
+        </div>
+        <div class="links_footer">
+          <ul class="nav_links">
+            <li><a href="#about_us"> ABOUT US</a></li>
+            <li><a href="#menu"> MENU</a></li>
+            <li><a href="#contact"> CONTACT</a></li>
+          </ul>
+        </div>
+        <div class="info_footer">
+          <p class="info_para">
+            Stay up to date with our new openings, upcoming events, <br />
+            seasonal specials and promotions. Check our socials.
+          </p>
+          <div class="info_icons">
+            <div class="">
+              <a href="https://google.com" target="_blank"
+                ><img src="assets/icons/twitter-icon.svg" alt="twitter-icon"
+              /></a>
+            </div>
+            <div class="facebook_icon">
+              <a href="https://google.com" target="_blank"
+                ><img src="assets/icons/facebook-icon.svg" alt="facebook-icon"
+              /></a>
+            </div>
+            <div class="">
+              <a href="https://google.com" target="_blank"
+                ><img
+                  src="assets/icons/instagram-icon.svg"
+                  alt="instagram-icon"
+              /></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer_line"></div>
+      <div class="footer_copyright">&copy; 2023 The Veggie King</div>
+    </div>
+  </footer>
 </html>
