Hover effects added

--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
               non-obvious food.
             </p>
             <button class="check_menu">
-              Check menu &nbsp
-              <img src="assets/icons/check-menu-icon.svg" alt="" />
+              <a href="#menu" class="check_menu-text">
+                Check menu &nbsp
+                <img
+                  src="assets/icons/check-menu-icon.svg"
+                  alt="check-menu-icon"
+                />
+              </a>
             </button>
           </div>
         </div>
@@ -257,17 +262,17 @@
             seasonal specials and promotions. Check our socials.
           </p>
           <div class="info_icons">
-            <div class="">
+            <div class="social_icon">
               <a href="https://google.com" target="_blank"
                 ><img src="assets/icons/twitter-icon.svg" alt="twitter-icon"
               /></a>
             </div>
-            <div class="facebook_icon">
+            <div class="facebook-icon social_icon">
               <a href="https://google.com" target="_blank"
                 ><img src="assets/icons/facebook-icon.svg" alt="facebook-icon"
               /></a>
             </div>
-            <div class="">
+            <div class="social_icon">
               <a href="https://google.com" target="_blank"
                 ><img
                   src="assets/icons/instagram-icon.svg"
