About Us section in progress

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a href="#contact"> CONTACT</a></li>
         </ul>
         <button class="btn__menu" onclick="openMenu()">
-          <img src="assets/icons/check-menu-icon.svg" alt="check-menu-icon" />
+          <img src="assets/icons/menu-icon.svg" alt="check-menu-icon" />
         </button>
         <div class="menu__backdrop">
           <button class="btn__menu btn__menu--close" onclick="closeMenu()">
@@ -110,16 +110,16 @@
             src="assets/images/about-us-section-food.png"
             alt=""
           />
-        </div>
-        <div class="section2_right_container">
-          <div class="section2_right_row">
-            <h4 class="section_link">About Us</h4>
-            <h2 class="section_title">Few words about us</h2>
-            <p class="section_info">
-              We are not ordinary food truck. We create a place <br />
-              overflowing with positive energy that it expresses <br />
-              important to us values. Get to know them specifically.
-            </p>
+          <div class="section2_right_container">
+            <div class="section2_right_row">
+              <h4 class="section_link">About Us</h4>
+              <h2 class="section_title">Few words about us</h2>
+              <p class="section_info">
+                We are not ordinary food truck. We create a place <br />
+                overflowing with positive energy that it expresses <br />
+                important to us values. Get to know them specifically.
+              </p>
+            </div>
           </div>
         </div>
       </div>
