Mobile Menu completed

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <li><a href="#menu"> MENU</a></li>
           <li><a href="#contact"> CONTACT</a></li>
         </ul>
-        <button class="btn__menu" onclick="openMenu()">
+        <button class="btn__menu btn_block" onclick="openMenu()">
           <img src="assets/icons/menu-icon.svg" alt="check-menu-icon" />
         </button>
         <div class="menu__backdrop">
@@ -46,13 +46,9 @@
         </div>
         <div class="section1_left">
           <div class="section1_description">
-            <h3 class="s1_title">
-              Healthy & Fresh <br />
-              Food For You
-            </h3>
+            <h3 class="s1_title">Healthy & Fresh Food For You</h3>
             <p class="s1_info">
-              Created for lovers of healthy, delicious and <br />
-              non-obvious food.
+              Created for lovers of healthy, delicious and non-obvious food.
             </p>
             <button class="check_menu">
               <a href="#menu" class="check_menu-text">
