--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
             <div class="section2_right_row">
               <h4 class="section_link">About Us</h4>
               <h2 class="section_title">Few words about us</h2>
-              <p class="section_info">
-                We are not ordinary food truck. We create a place <br />
-                overflowing with positive energy that it expresses <br />
-                important to us values. Get to know them specifically.
+              <p class="section_info section2_info">
+                We are not ordinary food truck. We create a place overflowing
+                with positive energy that it expresses important to us values.
+                Get to know them specifically.
               </p>
             </div>
           </div>
