--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           <img class="logo_footer" src="assets/icons/logo.svg" alt="logo" />
         </div>
         <div class="links_footer">
-          <ul class="nav_links">
+          <ul class="footer_links">
             <li><a href="#about_us"> ABOUT US</a></li>
             <li><a href="#menu"> MENU</a></li>
             <li><a href="#contact"> CONTACT</a></li>
