--- a/index.html
+++ b/index.html
@@ -269,15 +269,15 @@
         </div>
         <div class="links_footer">
           <ul class="footer_links">
-            <li><a href="#about_us"> ABOUT US</a></li>
-            <li><a href="#menu"> MENU</a></li>
-            <li><a href="#contact"> CONTACT</a></li>
+            <li class="li"><a href="#about_us"> ABOUT US</a></li>
+            <li class="li"><a href="#menu"> MENU</a></li>
+            <li class="li"><a href="#contact"> CONTACT</a></li>
           </ul>
         </div>
         <div class="info_footer">
           <p class="info_para">
-            Stay up to date with our new openings, upcoming events, <br />
-            seasonal specials and promotions. Check our socials.
+            Stay up to date with our new openings, upcoming events, seasonal
+            specials and promotions. Check our socials.
           </p>
           <div class="info_icons">
             <div class="social_icon">
