Menu and Gallery section are tablet ready

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 src="assets/images/menu-section-mighty-burger.png"
                 alt="menu_burger"
               />
-              <div>
+              <div class="card_desc">
                 <h4 class="card_title">Mighty burger</h4>
                 <p class="card_info">Served with fires and drink</p>
               </div>
@@ -150,7 +150,7 @@
                 src="assets/images/menu-section-chickpae-salad.png"
                 alt="menu_salad"
               />
-              <div>
+              <div class="card_desc">
                 <h4 class="card_title">Chickpae's salad</h4>
                 <p class="card_info">Served with fires and drink</p>
               </div>
@@ -161,7 +161,7 @@
                 src="assets/images/menu-section-chickpae-wrap.png"
                 alt="menu_wrap"
               />
-              <div>
+              <div class="card_desc">
                 <h4 class="card_title">Chickpae's wrap</h4>
                 <p class="card_info">Served with fires and drink</p>
               </div>
