--- a/index.html
+++ b/index.html
@@ -260,48 +260,50 @@
         </div>
       </div>
     </section>
-  </body>
-  <footer>
-    <div class="footer_container">
-      <div class="footer_row">
-        <div>
-          <img class="logo_footer" src="assets/icons/logo.svg" alt="logo" />
-        </div>
-        <div class="links_footer">
-          <ul class="footer_links">
-            <li class="li"><a href="#about_us"> ABOUT US</a></li>
-            <li class="li"><a href="#menu"> MENU</a></li>
-            <li class="li"><a href="#contact"> CONTACT</a></li>
-          </ul>
-        </div>
-        <div class="info_footer">
-          <p class="info_para">
-            Stay up to date with our new openings, upcoming events, seasonal
-            specials and promotions. Check our socials.
-          </p>
-          <div class="info_icons">
-            <div class="social_icon">
-              <a href="https://google.com" target="_blank"
-                ><img src="assets/icons/twitter-icon.svg" alt="twitter-icon"
-              /></a>
-            </div>
-            <div class="facebook-icon social_icon">
-              <a href="https://google.com" target="_blank"
-                ><img src="assets/icons/facebook-icon.svg" alt="facebook-icon"
-              /></a>
-            </div>
-            <div class="social_icon">
-              <a href="https://google.com" target="_blank"
-                ><img
-                  src="assets/icons/instagram-icon.svg"
-                  alt="instagram-icon"
-              /></a>
+    <footer>
+      <div class="footer_container">
+        <div class="footer_row">
+          <div>
+            <img class="logo_footer" src="assets/icons/logo.svg" alt="logo" />
+          </div>
+          <div class="links_footer">
+            <ul class="footer_links">
+              <li class="li"><a href="#about_us"> ABOUT US</a></li>
+              <li class="li"><a href="#menu"> MENU</a></li>
+              <li class="li"><a href="#contact"> CONTACT</a></li>
+            </ul>
+          </div>
+          <div class="info_footer">
+            <p class="info_para">
+              Stay up to date with our new openings, upcoming events, seasonal
+              specials and promotions. Check our socials.
+            </p>
+            <div class="info_icons">
+              <div class="social_icon">
+                <a href="https://google.com" target="_blank"
+                  ><img src="assets/icons/twitter-icon.svg" alt="twitter-icon"
+                /></a>
+              </div>
+              <div class="facebook-icon social_icon">
+                <a href="https://google.com" target="_blank"
+                  ><img
+                    src="assets/icons/facebook-icon.svg"
+                    alt="facebook-icon"
+                /></a>
+              </div>
+              <div class="social_icon">
+                <a href="https://google.com" target="_blank"
+                  ><img
+                    src="assets/icons/instagram-icon.svg"
+                    alt="instagram-icon"
+                /></a>
+              </div>
             </div>
           </div>
         </div>
+        <div class="footer_line"></div>
+        <div class="footer_copyright">&copy; 2023 The Veggie King</div>
       </div>
-      <div class="footer_line"></div>
-      <div class="footer_copyright">&copy; 2023 The Veggie King</div>
-    </div>
-  </footer>
+    </footer>
+  </body>
 </html>
